--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,6 @@
 <h1>Your Recipes</h1>
 <% @recipes.each do |recipe| %>
-
+    <h3><%= recipe.name %></h3>
+     <p><%= recipe.ingredients %></p>
+     <p><%= recipe.cook_time %></p>
 <% end %>
