--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,6 @@
 <h1>Your Recipes</h1>
 <% @recipes.each do |recipe| %>
     <h3><%= recipe.name %></h3>
-    <a href="/recipes/:id">recipe link</a> 
+    <% @id = recipe.id %>
+    <a href="/recipes/#{@id}">recipe link</a> 
      <% end %>
