--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Your Recipes</h1>
 <% @recipes.each do |recipe| %>
     <h3><%= recipe.name %></h3>
-    <% @id = recipe.id %>
-    <a href="/recipes/#{@id}">recipe link</a> 
+    
+    <a href="/recipes/<%= recipe.id %>">recipe link</a> 
      <% end %>
