--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,1 +1,4 @@
-<h1>Recipe</h1>
+<h1>Recipe</h1><br>
+<h3><%= @recipe.name %></h3><br>
+<h3><%= @recipe.ingredients %></h3><br>
+<h3><%= @recipe.cook_time %></h3><br>
