--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -4,4 +4,5 @@
 <h3><%= @recipe.cook_time %></h3><br>
 <form action="/recipes/<%= @recipe.id %>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="delete">
 </form>
